css/general/parallax.scss
---
# front matter for jekyll processing
---

@import "breakpoint-defs";

body {
    overflow: hidden;

    @media (orientation:portrait) and (min-width: $width-breakpoint) {
        font-size: 1.8em;
        font-weight: 500;
    }
}

article#main {
    margin: 0;
    font-family: "Montserrat";
    min-height: 85vh;
}

.parallax {
    perspective: 300px;
    overflow-x: hidden;
    overflow-y: auto;
    height: 100vh;

    .section {
        position: relative;
        transform-style: preserve-3d;

        &.footer {
            height: auto;

            .background, .foreground {
                height: auto;
                min-height: auto;
            }
        }

        &.last {
            margin-bottom: 50vh;
        }

        .background, .foreground {
            top: 0;
            right: 0;
            bottom: 0;
            left: 0;
        }

        .background {
            transform: translateZ(-300px) scale(2.1);
            position: absolute;
            height: 100vh;
            
            img {
                min-width: 100%;
                height: 100%;
                object-fit: cover;
            }
        }

        .foreground {
            display: flex;
            align-items: center;
            transform: translateZ(0);
            min-height: 100vh;
            position: relative;

            @media (orientation: portrait) {
                flex-direction: column;
                justify-content: center;
            }

            .content {
                height: min-content;
                position: relative;
                margin: 0 6vw;

                &.light {
                    color: white;
                }

                &.media-left, &.media-right {
                    display: flex;
                    align-items: center;
                    
                    @media (orientation: portrait) {
                        flex-direction: column;
                    }
                }

                $media-margin: 3em;

                &.media-left{
                    .media {
                        margin-right: $media-margin;
                    }
                }

                &.media-right{
                    .media {
                        margin-left: $media-margin;
                    }

                    :not(.media) {
                        width: 100%;
                    }
                }

                @media (orientation: portrait) {
                    justify-content: center;
                    height: auto;

                    &.media-right, &.media-left {
                        .media {
                            margin-left: 0;
                            margin-right: 0;
                        }
                    }
                }
            }

            @media (orientation: landscape) {
                &.right {
                    margin-left: 5vw;
                }
        
                &.left {
                    margin-right: 5vw;
                }
            }
        }
    }
}

